--- a/app/views/settlement/gameevent.html
+++ b/app/views/settlement/gameevent.html
@@ -62,13 +62,13 @@
             </thead>
             <tbody>
               <tr class="pointer-main" ng-repeat="fd in formData">
-                <td class="pointer"><a href="#/createinteractivedetail/{{fd.id}}">{{fd.clientId}}</a></td>
-                <td class="pointer"><a href="#/createinteractivedetail/{{fd.id}}">{{fd.externalId}}</a></td>
-                <td class="pointer"><a href="#/createinteractivedetail/{{fd.id}}">{{getMonth(fd.activityMonth)}}</a></td>
-                <td class="pointer"><a href="#/createinteractivedetail/{{fd.id}}">{{fd.dataUploadedDate | DateFormat}}</a></td>
-                <td class="pointer"><a href="#/createinteractivedetail/{{fd.id}}">{{fd.businessLine}}</a></td>
-                <td class="pointer"><a href="#/createinteractivedetail/{{fd.id}}">{{fd.mediaCategory}}</a></td>
-                <td class="pointer"><a href="#/createinteractivedetail/{{fd.id}}">{{fd.chargeCode}}</a></td>
+                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.clientId}}</a></td>
+                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.externalId}}</a></td>
+                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{getMonth(fd.activityMonth)}}</a></td>
+                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.dataUploadedDate | DateFormat}}</a></td>
+                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.businessLine}}</a></td>
+                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.mediaCategory}}</a></td>
+                <td class="pointer"><a href="#/editinteractivedetail/{{fd.id}}">{{fd.chargeCode}}</a></td>
                 
               </tr>
             </tbody>
