manually merge interactive events functionality

--- a/app/views/administration/organization.html
+++ b/app/views/administration/organization.html
@@ -78,9 +78,9 @@
 	      <h4 class="list-group-item-heading"><i class="icon-book icon-large"></i>&nbsp;&nbsp;Message</h4>
 	      <p class="list-group-item-text">A Message</p>
 	    </a>
-	    <a class="list-group-item" href="#/gameevent">
-	      <h4 class="list-group-item-heading"><i class="icon-book icon-large"></i>&nbsp;&nbsp;Game Headers</h4>
-	      <p class="list-group-item-text">Create events for games</p>
+	     <a class="list-group-item" href="#/businessline">
+	      <h4 class="list-group-item-heading"><i class="icon-book icon-large"></i>&nbsp;&nbsp;BusinessLine</h4>
+	      <p class="list-group-item-text">Business Line</p>
 	    </a>
 	    
 	  </div>
