--- a/app/views/organization/createbusinessline.html
+++ b/app/views/organization/createbusinessline.html
@@ -12,7 +12,7 @@
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
 	<fieldset>
-		<legend> {{'label.createevent' | translate}}</legend>
+		<legend> {{'label.createbusinessline' | translate}}</legend>
 		<table width="100%">
 			<tr>
 				<td width="50%">
