--- a/app/views/settlement/editpartneragreement.html
+++ b/app/views/settlement/editpartneragreement.html
@@ -27,7 +27,7 @@
            <legend>Edit Partner Agreement</legend>   
           
           
-          <table>
+          <!-- <table>
           
           <tr><td>
 	       
@@ -175,7 +175,147 @@
              </div> 
              
       </td></tr>	
-</table>
+</table> -->
+
+	 <div>
+	 <table>
+	 <tr><td>
+          <div class="control-group">
+			<label class="control-label" for="partnerName">{{'label.partner.partnername' | translate }}&nbsp;<span class="required">*</span></label>
+				<div class="controls">
+				<select ng-model="formData.partnerAccountId" id="partnerName" ng-change="getCategory(formData.partnerAccountId)" ng-options="pn.id as pn.partnerName for pn in mediaSettlementPartnerNameDatas" value="{{pn.partnerName}}">
+					</select>
+				</div>
+			</div> 
+			</td>
+			<td>
+	 	   <div class="control-group">
+	            <label class="control-label" for="partnerType">Partner Type&nbsp;<span class="required">*</span></label>
+	            <div class="controls">
+	              <select ng-model="formData.partnerType"  ng-options="partnerTypeData.id as partnerTypeData.mCodeValue for partnerTypeData in partnerTypeDatas" value="{{partnerTypeData.id}}" >
+	              </select>
+	            </div>
+	       </div>
+	       </td>
+		</tr>
+	 	     
+		<tr><td>	
+          <div class="control-group">
+	            <label class="control-label" for="agreementType">Agreement Type&nbsp;<span class="required">*</span></label>
+	            <div class="controls">
+	              <select ng-model="formData.agreementType"  ng-options="agreementTypeData.id as agreementTypeData.mCodeValue for agreementTypeData in agreementTypeDatas" value="{{agreementTypeData.id}}">
+	              </select>
+	            </div>
+	       </div>
+	   </td>
+	   <td>
+	       
+	       <div class="control-group">
+	            <label class="control-label" for="agreementCategory">Agreement Category&nbsp;<span class="required">*</span></label>
+	            <div class="controls">
+	              <select ng-model="formData.agreementCategory"  ng-change="minimumValue(formData.agreementCategory)" ng-options="agreementCategoryData.id as agreementCategoryData.mCodeValue for agreementCategoryData in agreementCategoryDatas" value="{{agreementCategoryData.id}}">
+	              </select>
+	            </div>
+	       </div>
+	     </td>
+	   
+	   </tr>	
+		
+	     <tr><td></td>
+	     <td>
+	     <div ng-show="mgAmount" class="control-group">
+            <label class="control-label"  for="requiredValue">MG Amount&nbsp;<span class="required">*</span></label>
+					<div class="controls">
+					<input type="text" class="requiredValue" ng-model="formData.mgAmount" >
+					</div>
+			</div>			              
+	     </td>
+	     </tr>	
+		<tr><td>
+	       
+	       <div class="control-group">
+	            <label class="control-label" for="royaltyType">Royalty Type&nbsp;<span class="required">*</span></label>
+	            <div class="controls">
+	              <select ng-model="formData.royaltyType"  ng-options="royaltyTypeData.id as royaltyTypeData.mCodeValue for royaltyTypeData in royaltyTypeDatas" value="{{royaltyTypeData.id}}">
+	              </select>
+	            </div>
+	       </div>
+	     </td>
+	    <td>
+	       
+	       <div class="control-group">
+	            <label class="control-label" for="settlementSource">Settlement Source&nbsp;<span class="required">*</span></label>
+	            <div class="controls">
+	              <select ng-model="formData.settlementSource"  ng-options="settlementSourceData.id as settlementSourceData.mCodeValue for settlementSourceData in settlementSourceDatas" value="{{settlementSourceData.id}}">
+	              </select>
+	            </div>
+	       </div>
+	     </td></tr>
+	     
+		<tr><td>
+	       
+	       <div class="control-group">
+            <label class="control-label" for="startDate">Contr Effect Date&nbsp;<span class="required">*</span></label>
+            <div class="controls">
+              <input type="text" id="startDate" datepicker-pop="dd MMMM yyyy" ng-model="formData.startDate" is-open="opened"  
+              date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/>
+            </div>	
+          </div>
+      
+      </td><td>
+      				  
+      		<div class="control-group">
+            <label class="control-label" for="endDate">Contr Termi Date&nbsp;<span class="required">*</span></label>
+            <div class="controls">
+              <input type="text" id="endDate" datepicker-pop="dd MMMM yyyy" ng-model="formData.endDate" is-open="opened" min="minDate"
+              date-disabled="disabled(date, mode)" required late-Validate style="background-color:#FFFFFF;"  readonly/>
+            </div>	
+          </div>
+      
+      </td></tr>	
+		<tr><td></td><td>
+      				  
+      		<div class="control-group">
+              <label class="control-label" for="file">Agreement Doc</label>
+              <div class="controls">
+                <input type="file" ng-file-select="onFileSelect($files)">
+              </div>
+             </div> 
+             
+      </td></tr>	
+     </table>
+     </div> 
+      
+               	<div class="control-group">
+	            	<label class="control-label" for="mediaCategory">Media Category&nbsp;<span class="required">*</span></label>
+	            	<div class="controls">
+	              	<select ng-model="formData.mediaCategory" ng-change="getMediaDetails(formData.mediaCategory)" ng-options="mediaCategoryData.id as mediaCategoryData.mCodeValue for mediaCategoryData in mediaCategoryDatas" value="{{mediaCategoryData.id}}" >
+	             	 </select>
+	           		 </div>
+	      		 </div>
+         
+        <div>
+        <table>
+        
+        		<tr class="graybg">
+                      <th>Play Source</th>
+                      <th>Royalty Share</th>
+                      <th>Royalty Sequence</th>
+                      <th>Status</th>
+                    </tr>
+        		 
+        		 <tr  ng-repeat=" pa in partnerAgreementDatas">
+        		 <td><select ng-model="pa.playSource"  class="input-medium" ng-options="playSourceData.id as playSourceData.mCodeValue for playSourceData in playSourceDatas" value="{{playSourceData.id}}">
+					  </select></td>
+        		 <td><input type="text" id="royaltyShare" ng-model="pa.royaltyShare"></td>
+				 <td><select  id="royaltySequence" ng-model="pa.royaltySequence" ng-options="rs.id as rs.value for rs in royaltySequenceDatas" value="{{rs.id}}" >
+            	</select></td>	  
+        		 <td><select  id="status" ng-model="pa.status" ng-options="s.id as s.value for s in statusDatas" value="{{s.id}}" >
+            	</select></td>
+        		 </tr>
+        		 
+			</table>
+    	</div>  
 
 <div class="offset3">
             <a href="#/game" ><button type="reset" class="btn" ng-click="tabStatus()">{{'button.cancel'| translate}}</button></a>
