--- a/app/views/administration/game.html
+++ b/app/views/administration/game.html
@@ -198,7 +198,7 @@
           
            <div class="center">
             <a href="#/game"><button type="reset" class="btn">Cancel</button></a>
-            <button type="submit" class="btn btn-primary" ng-click="submitRevenueSettlement()" ng-disabled="disableSubmit">Save</button>
+            <button type="submit" class="btn btn-primary"  ng-disabled="disableSubmit">Save</button>
           </div>			
 			</div>
 			</form>		
